--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 h3{
     color: antiquewhite;
 }
+p{
+    background-color: cadetblue;
+    color: red;
+    border: 2px solid dotted;
+    height: 200px;
+    text-align: center;
+    position: center;
+}
