--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 h3{
     color: antiquewhite;
 }
-p{
-    background-color: cadetblue;
+#pos{
+    background-color: rgb(143, 160, 95);
     color: red;
-    border: 2px solid dotted;
+    border: 8px solid yellow;
     height: 200px;
+    width: 99%;
+    
+    
+}
+#pos .position{
+    position: relative;
     text-align: center;
-    position: center;
+    margin-top: 100px;
 }
